plugins {
    id 'dev.architectury.loom'
    id 'architectury-plugin'
    id 'maven-publish'
}

architectury {
    common(rootProject.enabled_platforms.split(','))
}

dependencies {
    // Required so Loom can set up properly
    minecraft "net.minecraft:minecraft:${rootProject.minecraft_version}"
    mappings loom.layered {
        officialMojangMappings()
    }

    implementation 'com.google.code.gson:gson:2.13.1'
    modImplementation "dev.architectury:architectury:${rootProject.architectury_api_version}"
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}
